@@ -1,5 +1,9 @@
 2006-01-29  Michael Olson  <mwolson@gnu.org>
 
+	* erc-ibuffer.el: Use `define-ibuffer-filter' instead of
+	`ibuffer-degine-limiter'.  Use `define-ibuffer-column' instead of
+	`ibuffer-define-column'.
+
 	* man/erc.texi (Obtaining ERC, Installation): Note that these
 	sections may be skipped if using the version of ERC that comes
 	with Emacs.
